<?xml version="1.0" encoding="utf-8"?>

<layout>



    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">

        <ImageView
            android:id="@+id/backgroundImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/image3"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="#FF0000"
            android:alpha="0.5" />

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/LoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/login_LoginTitle_ViewText"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailExemple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LoginEmailEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_LoginEmailEditText_Hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/LoginErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_LoginErrorMessage_TextView"
            android:textColor="#5f00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EmailExemple" />

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/login_Login_ButtonText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/AddAccountButton"
            app:layout_constraintTop_toBottomOf="@+id/LoginErrorMessage" />

        <Button
            android:id="@+id/AddAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="101dp"
            android:text="@string/login_AddAccount_ButtonText"
            app:layout_constraintEnd_toStartOf="@+id/LoginButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginErrorMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>