<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.example.noteapp.viewmodel.NoteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewNote"
        tools:ignore="MissingDefaultResource">


        <ImageView
            android:id="@+id/backgroundImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.5"
            android:background="#FF0000"
            android:scaleType="centerCrop"
            android:src="@drawable/image2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.note.attributes.noteTitle}"
                android:hint="@string/newNote_TextInputEditText_Hint"
                android:textSize="40sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/BodyInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/TextSizeDown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TitleInput">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bodyEditText"
                android:layout_width="match_parent"
                android:layout_height="612dp"
                android:text="@{viewModel.note.attributes.noteBody}"
                android:gravity="top|start"
                android:hint="@string/newNote_BodyInputEditText_Hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/TextSizeDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="10dp"
            android:text="@string/newNote_DecreaseSizeBodyText_ButtonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/SaveButton"
            app:layout_constraintStart_toEndOf="@+id/TextSizeUp" />

        <Button
            android:id="@+id/TextSizeUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/newNote_IncreaseSizeBodyText_ButtonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/SaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/newNote_SaveButtonText_ButtonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
